Change SS email

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -53,7 +53,7 @@ author:
         city: Barcelona, 08005
   - name: Serene Siow
     orcid: 0000-0001-6482-2191
-    email: siow.serene@gmail.com
+    email: s.siow@nus.edu.sg
     affiliations: 
       - ref: uo
         id: uo
